# contact-manager

./: .gitignore  ContactData.cpp  ContactData.h  ContactWindow.cpp  ContactWindow.h  EntryDialog.cpp  EntryDialog.h  README.md  main.cpp  meson.build
